tests/semantic/type_system4/type_system4.dl
//
// Type System 4
//
// This test checks that types are handled correctly. It was
// created for issue #201 "Type system: Fails when Union type
// expands to different primitive types".
//

.number_type number_primi_1
.number_type number_primi_2

.type number_primi_1_2 = number_primi_1 | number_primi_2

.type number_union_1 = number
.type number_union_2 = number

.type number_union_1_2 = number_union_1 | number_union_2

.symbol_type symbol_primi_1
.symbol_type symbol_primi_2

.type symbol_primi_1_2 = symbol_primi_1 | symbol_primi_2

.type symbol_union_1 = symbol
.type symbol_union_2 = symbol

.type symbol_union_1_2 = symbol_union_1 | symbol_union_2

// Numbers and Symbols

.type number_symbol = number | symbol // error

.type number_symbol_primi = number_primi_1 | symbol_primi_1 // error
.type number_symbol_primi_1_2 = number_primi_1_2 | symbol_primi_1_2 // error

.type number_symbol_union = number_union_1 | symbol_union_1 // error
.type number_symbol_union_1_2 = number_union_1_2 | symbol_union_1_2 // error
